that file will be used.  The -C option takes either a symbolic
color space or reference file and is "sticky," so it applies to
all subsequent input files that do not have their own -c right ahead
of them.

Added spectral picture support to rcrop and radcompare.

Added new utility, rcomb, which is something like a combination
of rmtxop and pcomb, it works with all the inputs and
outputs that rmtxop handles, but allows for general expressions
like those in pcomb for putting matrices together, working on
an element at a time.  (No resizing of matrices or accessing
neighboring elements, as permitted in pcomb.)  It saves memory
over rmtxop by operating on a row at a time, so can handle
input and output matrices with any number of rows.  It does
provide for a single matrix-multiplication operation at the end,
which only requires memory for that final matrix.

Added support for filtering hyperspectral images to pfilt.

Added support for 1- and 3-component float matrix i/o to
pcomb to allow for better interoperability.

Added support for -co+ option to rtpict, so it can directly
produce hyperspectral images.

Added new "specdata" and "specpict" primitives to support
interpolated spectral data files and hyperspectral images
as patterns.

Added support for multispectal sampling in rsensor, which will
put out as many color channels as specified in any -cs option
(default is 3 for RGB).

Added ability of mgf2rad to convert spectral data at least
for light, glow, plastic, and metal primitive types.  Need
to use new '-s' option to get new output.

Added handling of spectral images to rcode2bmp script.

Minor change to rcollate to allow explicit byte records to
be any specified length without checks against header input.

Added new hemisphere type to rfluxmtx, "h=cie" for CIE sky
scanner positions.  These are 145 patches with identical
row counts to Tregenza, but starting from a different
azimuth and reversing row directions at adjacent altitudes.